--- a/ZMYH/jianpu.html
+++ b/ZMYH/jianpu.html
@@ -1,16 +1,16 @@
 <html lang="zh-CN">
 
 <head>
-    <title>547>24级学生名单</title>
+    <title>547>载梦远航>简谱</title>
     <meta name="keywords" content="547班, 隆安中学" />
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
-    <link rel="icon" href="/2024547.ico
-    " type="image/x-icon">
+    <link rel="icon" href="/2024547.ico" type="image/x-icon">
     <link rel="stylesheet" async href="/style.css">
+    <link rel="stylesheet" async href="/tooltip.css">
 </head>
 
-<body style="min-width: 1200;">
+<body style="min-width: 1200;" id="body-">
     <header id="heard" style="background-color:var(--nav-bg-color);height: 102;width: 100%;margin: 0;" class="center">
         <div style="width: 1200;margin: 0 auto;">
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
@@ -79,11 +79,45 @@
             </ul>
         </div>
     </header>
-
     <div style="flex: 1;">
-        <object id="embedded-content" style="border:0px;display: inline-block;width: 100%;" type="text/x-scriptlet"
-            data="/protect/alls_.html"></object>
-        <br style="height: 20;">
+        <div class="center">
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">下载</h1>
+                </div>
+                <br style="width: 900;clear: both;">
+                <p>下载《载梦远航》简谱</p>
+                <div class="div_a">
+                    <div class="subd_a" style="width: 300;">
+                        <a href="/files/ZMYH-jp.pdf" target="_blank" download="载梦远航.pdf">
+                            <h2>PDF</h2>
+                        </a>
+                    </div>
+                    <div class="subd_a" style="width: 300;">
+                        <a href="/files/ZMYH.mid" target="_blank" download="载梦远航.mid">
+                            <h2>midi</h2>
+                        </a>
+                    </div>
+                    <div class="subd_a" style="width: 300;">
+                        <a href="/files/ZMYH-jp.png" target="_blank" download="载梦远航.png">
+                            <h2>PNG 位图</h2>
+                        </a>
+                    </div>
+                </div>
+                <br style="height: 10;">
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">载梦远航简谱（人声旋律）</h1>
+                </div>
+                <br style="width: 900;clear: both;">
+                <object id="embedded-content" style="border:0px;display: inline-block;width: 100%;" type="text/x-scriptlet"
+            data="/ZMYH/jianpu_source.html"></object>
+            </div>
+            <br style="height: 20;">
+        </div>
     </div>
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
