--- a/ZMYH/score.html
+++ b/ZMYH/score.html
@@ -1,14 +1,13 @@
 <html lang="zh-CN">
 
 <head>
-    <title>547>载梦远航>歌谱</title>
+    <title>547>载梦远航>五线谱</title>
     <meta name="keywords" content="547班, 隆安中学" />
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
-    <link rel="icon" href="2024547.ico" type="image/x-icon">
-    <link rel="stylesheet" async href="style.css">
-    <link rel="stylesheet" async href="audio1.css">
-    <link rel="stylesheet" async href="tooltip.css">
+    <link rel="icon" href="/2024547.ico" type="image/x-icon">
+    <link rel="stylesheet" async href="/style.css">
+    <link rel="stylesheet" async href="/tooltip.css">
 </head>
 
 <body style="min-width: 1200;" id="body-">
@@ -17,15 +16,15 @@
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
-                    <a href="index.html" target="_top">
-                        <img src="images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                    <a href="/index.html" target="_top">
+                        <img src="/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
                     <h1 style="font-size: 40px;margin-block-start: 5px;">隆安中学高547班官网</h1>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+                    <a href="/https://github.com/lazx547/lazx547.github.io" target="_blank">
                         <svg height="40" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="40"
                             data-view-component="true">
                             <path fill="var(--icon-fill-color)"
@@ -35,7 +34,7 @@
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="https://lazx547.github.io" target="_blank">
+                    <a href="/https://lazx547.github.io" target="_blank">
                         <svg width="40" height="40">
                             <text x="40" y="15" text-anchor="end" font-family="Calibri" font-size="14"
                                 font-weight="bold" fill="var(--icon-fill-color)">
@@ -45,7 +44,7 @@
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="https://lazxg547b.pages.dev" target="_blank">
+                    <a href="/https://lazxg547b.pages.dev" target="_blank">
                         <svg width="40" height="40" viewBox="0 0 1230.574 519.774" xmlns="http://www.w3.org/2000/svg"
                             preserveAspectRatio="xMidYMid meet">
                             <path fill="#F78100"
@@ -73,10 +72,10 @@
             <hr
                 style="border-width:0;color:#999999;background-color:#999999;margin-block-start: 0;margin-block-end: 0;height: 2;">
             <ul style="height: 40;">
-                <li><a class="dis_a" target="_top" href="index.html" style="padding: 10px 0;width: 60;">主页</a></li>
-                <li><a class="dis_a" target="_top" href="DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
-                <li><a class="dis_a" target="_top" href="ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
-                <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
+                <li><a class="dis_a" target="_top" href="/index.html" style="padding: 10px 0;width: 60;">主页</a></li>
+                <li><a class="dis_a" target="_top" href="/DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
+                <li><a class="dis_a" target="_top" href="/ZMYH/" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+                <li><a class="dis_a" target="_top" href="/about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
     </header>
@@ -88,20 +87,20 @@
                     <h1 style="position: relative;left: 20;">下载</h1>
                 </div>
                 <br style="width: 900;clear: both;">
-                <p>下载载梦远航歌谱（人声旋律）</p>
+                <p>下载《载梦远航》五线谱（人声旋律）</p>
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH.svg" target="_blank" download="载梦远航.svg">
+                        <a href="//files/ZMYH.svg" target="_blank" download="载梦远航.svg">
                             <h2>SVG 矢量图</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH.mid" target="_blank" download="载梦远航.mid">
+                        <a href="//files/ZMYH.mid" target="_blank" download="载梦远航.mid">
                             <h2>midi</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH.png" target="_blank" download="载梦远航.png">
+                        <a href="//files/ZMYH.png" target="_blank" download="载梦远航.png">
                             <h2>PNG 位图</h2>
                         </a>
                     </div>
@@ -111,7 +110,7 @@
             <br style="height: 20;">
             <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
                 <div style="float: left;border-left: var(--solid-border)">
-                    <h1 style="position: relative;left: 20;">载梦远航歌谱（人声旋律）</h1>
+                    <h1 style="position: relative;left: 20;">《载梦远航》五线谱（人声旋律）</h1>
                 </div>
                 <br style="width: 900;clear: both;">
                 <svg width="900" viewBox="0 0 14173.225 20034.47" version="1.2" id="svg615"
@@ -2035,7 +2034,7 @@
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
-                <img src="images/2024547.jpg"
+                <img src="/images/2024547.jpg"
                     style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
                 <p style="float: left;font-size: 30;">547web</p>
             </div>
@@ -2049,8 +2048,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
-    <script src="audio1.js"></script>
+    <script src="/script.js"></script>
     <script>
         const svg = document.getElementById('svg615');
         const heard = document.getElementById('heard');
