--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
             <ul style="height: 40;">
                 <li><a class="dis_a" target="_top" href="index.html" style="padding: 10px 0;width: 60;">主页</a></li>
                 <li><a class="dis_a" target="_top" href="DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
-                <li><a class="dis_a" target="_top" href="ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+                <li><a class="dis_a" target="_top" href="/ZMYH/" style="padding: 10px 0;width: 80;">载梦远航</a></li>
                 <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
@@ -173,7 +173,7 @@
             <br style="height: 20;">
             <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
                 <div style="float: left;border-left: var(--solid-border)">
-                    <h1 style="position: relative;left: 20;">链接</h1>
+                    <h1 style="position: relative;left: 20;">一些链接</h1>
                 </div>
                 <br style="clear: both;">
                 <div class="center">
@@ -192,10 +192,12 @@
                     <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
                     <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
                     <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
-                    <a href="" class="aa" target="_blank"></a>
+                    <a href="https://dash.cloudflare.com/" class="aa" target="_blank">CloudFlare</a>
                     <a href="https://musescore.org/" class="aa" target="_blank">MuseScore</a>
                     <a href="https://www.vexflow.com/" class="aa" target="_blank">VexFlow</a>
                     <a href="https://github.com/mudcube/MIDI.js" class="aa" target="_blank">MIDI.js</a>
+                    <a href="https://notation.sparkslab.art/" class="aa" target="_blank">Spark NMN</a>
+                    
                 </div>
             </div>
             <br style="height: 20;">
@@ -233,20 +235,14 @@
                             <br>
                         </a>
                     </div>
-                    <!--<div class="subd_a" style="width: 200;">
-                        <a href="https://github.com/0xfe/vexflow" target="_blank">
-                            <h2>VexFlow</h2>
-                            <p>在html上显示五线谱</p>
+                    <div class="subd_a" style="width: 200;">
+                        <a href="https://github.com/yezhiyi9670/sparks-notation-1" target="_blank">
+                            <h2>Spark NMN</h2>
+                            <img src="/images/SparkNMN.png" width="80" height="80">
+                            <p>简谱编辑器</p>
                             <br>
                         </a>
                     </div>
-                    <div class="subd_a" style="width: 200;">
-                        <a href="https://github.com/mudcube/MIDI.js" target="_blank">
-                            <h2>MIDI.js</h2>
-                            <p>在html中播放midi</p>
-                            <br>
-                        </a>
-                    </div>-->
                 </div>
             </div>
             <br style="height: 20;">
@@ -256,9 +252,10 @@
                 </div>
                 <br style="clear: both;">
                 <p style="display: none;">QQ：2946983031</p>
-                <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a
-                        href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
+                <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><!-- <br><a
+                        href="mailto:2946983031@qq.com">2946983031@qq.com</a> --></p>
                 <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
+                <p>Bilibili：<a href="https://space.bilibili.com/3546975676926184" target="_blank">点击访问</a></p>
             </div>
             <br style="height: 20;">
         </div>
