--- a/history/index.html
+++ b/history/index.html
@@ -74,7 +74,7 @@
             <ul style="height: 40;">
                 <li><a class="dis_a" target="_top" href="/index.html" style="padding: 10px 0;width: 60;">主页</a></li>
                 <li><a class="dis_a" target="_top" href="/DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
-                <li><a class="dis_a" target="_top" href="/ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+                <li><a class="dis_a" target="_top" href="/ZMYH/" style="padding: 10px 0;width: 80;">载梦远航</a></li>
                 <li><a class="dis_a" target="_top" href="/about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
