--- a/ZMYH/index.html
+++ b/ZMYH/index.html
@@ -177,7 +177,7 @@
         <div style="height: 50;width: 100%;"></div>
         <div class="center" style="width: 910;min-height: 45;background-color: var(--div-bg-color);" id="zmyh_score">
             <div style="float: left;border-left: var(--solid-border);clear: both;">
-                <button onclick="scoreS()" style="position: relative;left: 20;">
+                <button onclick="scoreS()" style="position: relative;left: 20;color: var(--text-color);">
                     <h1>查看歌谱</h1>
                 </button><br>
             </div>
