--- a/ZMYH/jianpu_source.html
+++ b/ZMYH/jianpu_source.html
@@ -112,7 +112,7 @@
 <body>
 	<div class="preview-container">
 		<div class="preview-equifield">
-			<p>Loading preview...</p>
+			<p>加载中...<br>(加载时间较长，若长时间未完成可查看外部链接：<a target="_blank" href="https://www.jianpu.net/jianpu/150030.html">简谱之家</a>)</p>
 		</div>
 	</div>
 	<script>
