--- a/ZMYH/score.html
+++ b/ZMYH/score.html
@@ -6,8 +6,8 @@
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
     <link rel="icon" href="/2024547.ico" type="image/x-icon">
-    <link rel="stylesheet" async href="/style.css">
-    <link rel="stylesheet" async href="/tooltip.css">
+    <link rel="stylesheet" async href="/css/style.css">
+    <link rel="stylesheet" async href="/css/tooltip.css">
 </head>
 
 <body style="min-width: 1200;" id="body-">
@@ -17,14 +17,14 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="/index.html" target="_top">
-                        <img src="/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
                     <h1 style="font-size: 40px;margin-block-start: 5px;">隆安中学高547班官网</h1>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="/https://github.com/lazx547/lazx547.github.io" target="_blank">
+                    <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
                         <svg height="40" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="40"
                             data-view-component="true">
                             <path fill="var(--icon-fill-color)"
@@ -34,7 +34,7 @@
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="/https://lazx547.github.io" target="_blank">
+                    <a href="https://lazx547.github.io" target="_blank">
                         <svg width="40" height="40">
                             <text x="40" y="15" text-anchor="end" font-family="Calibri" font-size="14"
                                 font-weight="bold" fill="var(--icon-fill-color)">
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
-                    <a href="/https://lazxg547b.pages.dev" target="_blank">
+                    <a href="https://lazxg547b.pages.dev" target="_blank">
                         <svg width="40" height="40" viewBox="0 0 1230.574 519.774" xmlns="http://www.w3.org/2000/svg"
                             preserveAspectRatio="xMidYMid meet">
                             <path fill="#F78100"
@@ -90,17 +90,17 @@
                 <p>下载《载梦远航》五线谱（人声旋律）</p>
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
-                        <a href="//files/ZMYH.svg" target="_blank" download="载梦远航.svg">
+                        <a href="/assets/files/ZMYH.svg" target="_blank" download="载梦远航.svg">
                             <h2>SVG 矢量图</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="//files/ZMYH.mid" target="_blank" download="载梦远航.mid">
+                        <a href="/assets/files/ZMYH.mid" target="_blank" download="载梦远航.mid">
                             <h2>midi</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="//files/ZMYH.png" target="_blank" download="载梦远航.png">
+                        <a href="/assets/files/ZMYH.png" target="_blank" download="载梦远航.png">
                             <h2>PNG 位图</h2>
                         </a>
                     </div>
@@ -2034,7 +2034,7 @@
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
-                <img src="/images/2024547.jpg"
+                <img src="/assets/images/2024547.jpg"
                     style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
                 <p style="float: left;font-size: 30;">547web</p>
             </div>
@@ -2048,7 +2048,7 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
     <script>
         const svg = document.getElementById('svg615');
         const heard = document.getElementById('heard');
