--- a/history/index.html
+++ b/history/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="/2024547.ico
     " type="image/x-icon">
-    <link rel="stylesheet" async href="/style.css">
+    <link rel="stylesheet" async href="/css/style.css">
 </head>
 
 <body style="min-width: 1200;">
@@ -17,7 +17,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="index.html" target="_top">
-                        <img src="/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
@@ -128,7 +128,7 @@
     <div id="footer" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footr" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
-                <img src="/images/2024547.jpg"
+                <img src="/assets/images/2024547.jpg"
                     style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
                 <p style="float: left;font-size: 30;">547web</p>
             </div>
@@ -142,8 +142,8 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
-    <script src="./script.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
