--- a/ZMYH/jianpu.html
+++ b/ZMYH/jianpu.html
@@ -6,8 +6,8 @@
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
     <link rel="icon" href="/2024547.ico" type="image/x-icon">
-    <link rel="stylesheet" async href="/style.css">
-    <link rel="stylesheet" async href="/tooltip.css">
+    <link rel="stylesheet" async href="/css/style.css">
+    <link rel="stylesheet" async href="/css/tooltip.css">
 </head>
 
 <body style="min-width: 1200;" id="body-">
@@ -17,7 +17,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="/index.html" target="_top">
-                        <img src="/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
@@ -90,17 +90,17 @@
                 <p>下载《载梦远航》简谱</p>
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH-jp.pdf" target="_blank" download="载梦远航.pdf">
+                        <a href="/assets/files/ZMYH-jp.pdf" target="_blank" download="载梦远航.pdf">
                             <h2>PDF</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH.mid" target="_blank" download="载梦远航.mid">
+                        <a href="/assets/files/ZMYH.mid" target="_blank" download="载梦远航.mid">
                             <h2>midi</h2>
                         </a>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="/files/ZMYH-jp.png" target="_blank" download="载梦远航.png">
+                        <a href="/assets/files/ZMYH-jp.png" target="_blank" download="载梦远航.png">
                             <h2>PNG 位图</h2>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
-                <img src="/images/2024547.jpg"
+                <img src="/assets/images/2024547.jpg"
                     style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
                 <p style="float: left;font-size: 30;">547web</p>
             </div>
@@ -136,7 +136,7 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
