--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
     <link rel="icon" href="2024547.ico" type="image/x-icon">
-    <link rel="stylesheet" async href="./style.css">
+    <link rel="stylesheet" async href="/css/style.css">
     <style>
         .aa {
             display: inline-block;
@@ -26,7 +26,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="index.html" target="_top">
-                        <img src="images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
@@ -147,7 +147,7 @@
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
                         <h2>547DesktopTool</h2>
-                        <img src="images/547dt.png" style="width:80px;height:80px;">
+                        <img src="/assets/images/547dt.png" style="width:80px;height:80px;">
                         <p>547桌面工具</p>
                         <p>
                             <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
@@ -238,7 +238,7 @@
                     <div class="subd_a" style="width: 200;">
                         <a href="https://github.com/yezhiyi9670/sparks-notation-1" target="_blank">
                             <h2>Spark NMN</h2>
-                            <img src="/images/SparkNMN.png" width="80" height="80">
+                            <img src="/assets/images/SparkNMN.png" width="80" height="80">
                             <p>简谱编辑器</p>
                             <br>
                         </a>
@@ -263,7 +263,7 @@
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
-                <img src="images/2024547.jpg"
+                <img src="/assets/images/2024547.jpg"
                     style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
                 <p style="float: left;font-size: 30;">547web</p>
             </div>
@@ -277,7 +277,7 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
