--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <div style="height: 10;"></div>
                             <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000"
                                 style="width:345;height:345;">
-                            <a href="ZMYH.html" target="_blank">
+                            <a href="/ZMYH/" target="_blank">
                                 <h2>载梦远航</h2>
                                 <p>隆安中学校歌</p>
                             </a>
